<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">饮水思源</string>
    <string name="website">bbs.sjtu.edu.cn</string>
    <string name="UserName">用户名：</string>
    <string name="Password">密码：</string>
    <string name="copyright">©饮水思源 bbs.sjtu.edu.cn</string>
    <string name="loginin">登入</string>
    <string name="guest">逛逛</string>
    <string name="rememberpassword">记住密码</string>
    <string name="automaticlogin">自动登入</string>
    <string name="tips">你输入的用户名或者密码为空，请检查输入!</string>
    <string name="loading">登入中请稍后······</string>
    <string name="selectborad">选择板面:</string>
    <string name="back">返回</string>
    <string name="navigation">站点导航</string>
    <string name="refresh">刷新</string>
    <string name="new_message">你有新站内信,</string>
    <string name="pull_to_refresh_pull_label">下拉可以更新...</string>
    <string name="pull_to_refresh_release_label">松开即可更新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="sendmsg_sucess">站信送成功</string>
    <string name="sendmsg_fail">站信送失败</string>
    <string name="sendmsg_error">站信发送异常</string>
    <string name="newmsg">新建站内信</string>
    <string name="typewsitch">阅读模式切换</string>
    <string name="themetype">主题模式</string>
    <string name="normaltype">一般模式</string>
    <string name="post">发表新帖</string>
    <string name="goboard">进入版区</string>
    <string name="zhuantie">转帖</string>
    <string name="collection">收藏本帖</string>
    <string name="fav_board">收藏此版区</string>
    <string name="share">分享</string>
    <string name="add">增加版区收藏</string>
    <string name="delete">删除版区收藏</string>
    <string name="delete_post">删除该帖</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="finger">笔触</string>
    <string name="color">颜色</string>
    <string name="upimg">发表</string>
    <string name="photo">图片</string>
    <string name="normal">普通</string>
    <string name="emboss">立体</string>
    <string name="blur">喷漆</string>
    <string name="erase">擦除</string>
    <string name="srcatop">混色</string>
    <string name="replytitle">文章标题:</string>
    <string name="replycontent">文章内容:</string>
    <string name="setting">设置</string>
    	<string name="setting_feedback">建议与反馈</string>
    <string name="setting_about">关于</string>
    <string name="setting_tail">客户端尾巴</string>
    <string name="setting_prefix">回复前缀</string>
    <string name="setting_quote">帖子引用</string>
    <string name="setting_quote_on">含部分引用</string>
    <string name="setting_quote_off">不含帖子引用</string>
    <string name="has">有</string>
    <string name="hasnot">无</string>
    <string name="setting_storeimg">帖子中的图片</string>
    <string name="setting_storeimg_on">自动下载到/sd/bbs/image文件夹</string>
    <string name="setting_storeimg_off">不存储</string>
    <string name="setting_loadimg">是否加载图片</string>
    <string name="setting_loadimg_on">自动加载</string>
    <string name="setting_loadimg_off">不加载</string>
    <string name="app_about">饮水思源BBS掌上客户端</string>
    <string name="aboutInfo"><h3>这是饮水思源BBS的手机客户端，基本包括了Web端的主要功能。感谢之前Ye Rurui Zhu xinyu，Peng jianxiang写的最早期的简单源代码，才有了我做BBS客户端的念头。感谢prompt、tairuo同学在我测试尾巴的时候提供的帮助。\n</h3><h3>你的有效建议使得程序不断完善和优化，谢谢!\n</h3><h3>如有问题请联系:tank.tyt\@gmail.com\n</h3><h3>请关注我的微博的最新动态：\n http://weibo.com/tyt00\n</h3><h3>官网：http://bbs.sjtu.edu.cn\n</h3></string>

</resources>