<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:text="@string/app_name"
        android:textColor="@color/text"
        android:textSize="36dip" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/name"
        android:layout_marginRight="20dip"
        android:text="@string/website"
        android:textColor="@color/text"
        android:textSize="24dip" />

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/website"
        android:layout_marginTop="30dip" >

        <EditText
            android:id="@+id/UserNameEditText"
            android:background="@drawable/bg_edittext"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="5dip"
            android:hint="@string/UserName"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <EditText
            android:id="@+id/PasswordEditText"
            android:background="@drawable/bg_edittext"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_below="@+id/UserNameEditText"
            android:layout_marginLeft="25dip"
            android:layout_marginRight="25dip"
            android:layout_marginTop="5dip"
            android:hint="@string/Password"
            android:imeOptions="actionDone"
            android:password="true"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/automaticlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/PasswordEditText"
            android:layout_below="@+id/PasswordEditText"
            android:text="@string/automaticlogin"
            android:textColor="#3f3e3f" />
        <!-- <CheckBox -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:textColor="#000000" -->
        <!-- android:id="@+id/rememberpassword" -->
        <!-- android:layout_below="@+id/PasswordEditText" -->
        <!-- android:layout_alignLeft="@+id/PasswordEditText" -->
        <!-- android:text="@string/rememberpassword" -->
        <!-- android:checked="true" -->
        <!-- android:layout_height="wrap_content"/> -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/PasswordEditText"
            android:layout_alignRight="@+id/automaticlogin"
            android:padding="2dip"
            android:layout_below="@+id/automaticlogin" >

            <Button
                android:id="@+id/btn_login"
                android:background="@drawable/bg_btnnormal"
                android:textSize="22dip"
                android:textColor="#3f3e3f"
                android:layout_width="fill_parent"
                android:layout_marginRight="2dip"
                android:layout_height="45dip"
                android:layout_weight="1"
                android:text="@string/loginin" >
            </Button>

            <Button
                android:id="@+id/btn_guest"
                android:textSize="22dip"
                android:textColor="#3f3e3f"
                android:layout_marginLeft="2dip"
                 android:background="@drawable/bg_btnnormal"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_weight="1"
                android:text="@string/guest" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dip"
        android:gravity="center_horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/loadingtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            android:textColor="@color/text"
            android:textSize="20dip" />

        <ProgressBar
            android:id="@+id/Loading"
            android:layout_width="100dip"
            android:layout_height="15dip"
            android:layout_below="@id/loadingtext"
            android:layout_centerHorizontal="true"
            android:indeterminateOnly="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dip"
        android:text="@string/copyright" >
    </TextView>

</RelativeLayout>