<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/headLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/headimg"
        android:layout_width="45dip"
        android:layout_height="45dip"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="-8dip"
        android:background="@drawable/logo" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/headimg"
		android:layout_centerVertical="true"
        android:gravity="center"
        android:paddingLeft="5dip"
        android:paddingTop="5dip"
        android:textSize="18dip"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/grayblue" />

    <Button
        android:id="@+id/navigation"
        android:background="@drawable/bg_btnnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginRight="10dip"
		android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="20dip"
        android:paddingLeft="5dip"
        android:paddingTop="3dip"
        android:text="@string/navigation"
        android:textColor="@color/grayblue" />
	<LinearLayout 
	    android:id="@+id/banner_divider"
	    android:layout_below="@id/app_name"
	    android:layout_marginTop="4dip"
	    android:layout_marginLeft="48dip"
	    android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="@drawable/bg_divider"/>
	<TextView 
	    android:id="@+id/notification"
	    android:layout_below="@id/banner_divider"
	    android:gravity="center"
	    android:textSize="16dip"
	    android:text="@string/new_message"
	    android:visibility="gone"
	    android:background="#80000000"
	    android:textColor="#ffffff"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>